feat(ui): add layout and inline search
